@@ -65,7 +65,7 @@ extern "C" {
 
 #define LIBMOSQUITTO_MAJOR 0
 #define LIBMOSQUITTO_MINOR 10
-#define LIBMOSQUITTO_REVISION 0
+#define LIBMOSQUITTO_REVISION 90
 #define LIBMOSQUITTO_VERSION_NUMBER (LIBMOSQUITTO_MAJOR*1000000+LIBMOSQUITTO_MINOR*1000+LIBMOSQUITTO_REVISION)
 
 /* Log destinations */
