@@ -3,6 +3,9 @@
 
 - Removed all old sqlite code.
 - Remove client id limit in clients.
+- Implemented $SYS/broker/heap/maximum size
+- $SYS/broker/heap/current size and maximum size messages now include "bytes"
+  to match rsmb message format.
 
 0.10 - 20110429
 ===============
